<resources>
    <string name="app_name">My Notes</string>

    //account dialog
    <string name="account_dialog_my_notes">My notes</string>
    <string name="account_dialog_log_out">Log out</string>

    //bottom sheet
    <string name="bottom_sheet_choose_color">Choose color</string>

    //forget fragment
    <string name="fragment_forgot_reset_password">Forgot Password</string>
    <string name="fragment_forgot_register_email">Enter your registered e-mail address</string>
    <string name="fragment_forgot_reset_request_text">Send reset request</string>
    <string name="fragment_forgot_go_back_text">Go back</string>
    <string name="fragment_forgot_enter_email_address">Enter your e-mail address</string>
    <string name="fragment_forgot_reset_mail_sent">Reset mail sent</string>
    <string name="fragment_forgot_invalid_email_address">invalid email address</string>

    //fragment note
    <string name="fragment_note_title">My Notes</string>
    <string name="fragment_note_search_text">Search</string>
    <string name="fragment_note_add_text">Add Note</string>

    //fragment save
    <string name="fragment_save_regulation_text">Regulation</string>
    <string name="fragment_save_title">Title</string>
    <string name="fragment_save_notes">Notes..</string>

    //fragment sign up
    <string name="fragment_sign_up_title">Sign Up</string>
    <string name="fragment_sign_up_buttonText">Sign Up</string>
    <string name="fragment_sign_up_already_text">Are you already registered?</string>
    <string name="fragment_sign_up_name_text">Name</string>
    <string name="fragment_sign_up_email_text">E-Mail</string>
    <string name="fragment_sign_up_password_text">Password</string>
    <string name="fragment_sign_up_rePassword_text">Re-Password</string>
    <string name="fragment_sign_up_fill_in_fields">Fill in the fields</string>
    <string name="fragment_sign_up_password_length">Your password cannot be less than 6 digits or is not strong </string>
    <string name="fragment_sign_up_password_not_match">Passwords do not match</string>
    <string name="fragment_sign_up_invalid_email">Invalid or registered email address</string>
    <string name="fragment_sign_up_incorrect_email">incorrect email format</string>
    <string name="fragment_sign_up_network_error">Network Error</string>
    <string name="fragment_sign_up_registration_error">User registration errorUser registration error</string>

    //fragment sign in
    <string name="fragment_sign_in_title">Sign In</string>
    <string name="fragment_sign_in_btn_text">Sign In</string>
    <string name="fragment_sign_in_terms_conditions">Terms and Conditions</string>
    <string name="fragment_sign_in_login_with_google">Login with Google</string>
    <string name="fragment_sign_in_email">Email</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_password_forgot">Forgot password</string>
    <string name="fragment_sign_in_or_text">Or</string>
    <string name="fragment_sign_in_signUpText">Sign up</string>
    <string name="fragment_sign_in_verify_email">Verify email address</string>
    <string name="fragment_sign_in_noSuchAccount">No such account exists</string>
    <string name="fragment_sign_in_fill_in_fields">Fill in the fields</string>

    //Note layout
    <string name="note_layout_date">gg-aa-yyyy</string>
    <string name="note_layout_title">THIS IS A TITLE.THIS IS THE TESTING FOR APP</string>

    //No internet
    <string name="no_internet_text">No internet !</string>
    <string name="no_internet_connection_text">Check your internet connection</string>

    //Activity Main
    <string name="activity_main_no_internet">No internet !</string>
    <string name="activity_main_process_status">Background process status</string>
    <string name="activity_main_check_internet">Check your internet connection</string>

    //Splash Fragment
    <string name="splash_fragment_term_conditions">Terms and conditions must be accepted</string>
    <string name="splash_fragment_failed_registration">Failed registration</string>
    <string name="splash_fragment_Successful_registration">Successful registration</string>
    <string name="splash_fragment_user_notFound">User not found</string>
    <string name="splash_fragment_sign_in_failed">Google Sign in failed</string>
    <string name="splash_fragment_such_account">There is no such account </string>

    //SaveFragment
    <string name="save_fragment_edited_on">Organised: %s</string>
    <string name="save_fragment_write_something">"You must have written something</string>




</resources>